ingress/grafana-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik   # Use your cluster's ingress class
  rules:
    - host: grafana.svc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-grafana
                port:
                  number: 80
